--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Sample</title>
+    <title>Hello</title>
 </head>
 <body>
-    <h1>Hellow</h1>
-    <h1>JavaScript</h1>
-    <div id="variable"></div>
-    <script src="js/index.js"></script>
-    <script src="js/messi.js"></script>
+    <script src="js/Lyuba/index.js"></script>
 </body>
 </html>
