--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello</title>
+    <title>JavaScript</title>
 </head>
 <body>
-    <script src="js/Lyuba/index.js"></script>
+    <h1>Hellow</h1>
+    <h1>JavaScript</h1>
+    <div id="variable"></div>
+    <script src="js/Lyuba/messi.js"></script>
 </body>
-</html>
+</html> 
